--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "dotenv": "^16.3.1",
+    "firebase": "^10.5.2",
     "pexels": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
