--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@reduxjs/toolkit": "^1.9.7",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.2",
     "pexels": "^1.4.0",
@@ -26,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
